; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/actions/extr_owl-s500.c_s500_clk_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/actions/extr_owl-s500.c_s500_clk_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.owl_clk_desc = type { i32 }
%struct.platform_device = type { i32 }

@s500_clk_desc = common dso_local global %struct.owl_clk_desc zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @s500_clk_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s500_clk_probe(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.owl_clk_desc*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  store %struct.owl_clk_desc* @s500_clk_desc, %struct.owl_clk_desc** %3, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = load %struct.owl_clk_desc*, %struct.owl_clk_desc** %3, align 8
  %6 = call i32 @owl_clk_regmap_init(%struct.platform_device* %4, %struct.owl_clk_desc* %5)
  %7 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %8 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %7, i32 0, i32 0
  %9 = load %struct.owl_clk_desc*, %struct.owl_clk_desc** %3, align 8
  %10 = getelementptr inbounds %struct.owl_clk_desc, %struct.owl_clk_desc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @owl_clk_probe(i32* %8, i32 %11)
  ret i32 %12
}

declare dso_local i32 @owl_clk_regmap_init(%struct.platform_device*, %struct.owl_clk_desc*) #1

declare dso_local i32 @owl_clk_probe(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
